@@ -1,25 +1,20 @@
 package com.paperapi.paper_api.service;
 
-import org.springframework.ai.embedding.EmbeddingClient;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
+import java.util.Collections;
 import java.util.List;
 
 @Service
 public class VectorService {
 
-    private final EmbeddingClient embeddingClient;
-
-    @Autowired
-    public VectorService(EmbeddingClient embeddingClient) {
-        this.embeddingClient = embeddingClient;
-    }
+    // Temporary stub implementation: returns an empty embedding so
+    // the project can compile and run without Spring AI dependency.
 
     public List<Double> getEmbedding(String text) {
         if (text == null || text.isBlank()) {
-            return List.of();
+            return Collections.emptyList();
         }
-        return embeddingClient.embed(text);
+        return Collections.emptyList();
     }
 }
